--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 accel = { git = "https://github.com/rust-accel/accel.git", rev = "fecbf4b" }
 accel-native = { git = "https://github.com/lutzcle/accel-native" }
 cuda-sys = "0.2.0"
+error-chain = "~0.12.0"
 
 [dev-dependencies]
 criterion = "~0.2.5"
