--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,11 @@ cuda-sys = "0.2.0"
 error-chain = "~0.12.0"
 
 [dev-dependencies]
-criterion = "~0.2.5"
+average = "~0.9.2"
+csv = "~1.0.1"
+hostname = "~0.1.5"
+serde = "~1.0.76"
+serde_derive = "~1.0.76"
 
 [profile.release]
 debug = true
