--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 # accel = { path = "../accel" }
 accel = { git = "https://github.com/LutzCle/accel.git" }
 accel-native = { git = "https://github.com/lutzcle/accel-native" }
-cuda-sys = "0.2.0"
+cuda-sys = { git = "https://github.com/LutzCle/accel.git" }
 error-chain = "~0.12.0"
 mchj-generator = { git = "https://github.com/LutzCle/mchj-generator.git" }
 
