--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ description = "Joins and morsel-driven parallelism using NVLink 2.0 on POWER9"
 readme = "README.md"
 
 [dependencies]
-# accel = { path = "../accel" }
 accel = { git = "https://github.com/LutzCle/accel.git" }
 accel-native = { git = "https://github.com/lutzcle/accel-native" }
 cuda-sys = { git = "https://github.com/LutzCle/accel.git" }
@@ -17,10 +16,12 @@ mchj-generator = { git = "https://github.com/LutzCle/mchj-generator.git" }
 
 [dev-dependencies]
 average = "~0.9.2"
+clap = "*"
 csv = "~1.0.1"
 hostname = "~0.1.5"
 serde = "~1.0.76"
 serde_derive = "~1.0.76"
+structopt = "~0.2"
 
 [profile.release]
 debug = true
