--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ average = "~0.9.2"
 clap = "*"
 csv = "~1.0.1"
 hostname = "~0.1.5"
+rayon = "~1.0.3"
 serde = "~1.0.76"
 serde_derive = "~1.0.76"
 structopt = "~0.2"
