--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ accel-native = { git = "https://github.com/lutzcle/accel-native" }
 cuda-sys = { git = "https://github.com/LutzCle/accel.git" }
 error-chain = "~0.12.0"
 mchj-generator = { git = "https://github.com/LutzCle/mchj-generator.git" }
+raw-cpuid = "~6.1.0"
 
 [build-dependencies]
 cc = "~1.0.25"
