Update to Rust 2018

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ license = "MPL-2.0"
 repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
 description = "Joins and morsel-driven parallelism using NVLink 2.0 on POWER9"
 readme = "README.md"
+edition = "2018"
 
 [dependencies]
 accel = { git = "https://github.com/LutzCle/accel.git" }
