--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,14 @@ accel = { git = "https://github.com/LutzCle/accel.git" }
 accel-native = { git = "https://github.com/lutzcle/accel-native" }
 cuda-sys = { git = "https://github.com/LutzCle/accel.git" }
 error-chain = "~0.12.0"
+libc = "~0.2.43"
 mchj-generator = { git = "https://github.com/LutzCle/mchj-generator.git" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 raw-cpuid = "~6.1.0"
 
 [build-dependencies]
-cc = "~1.0.25"
+cc = { version = "~1.0.25", features = ["parallel"] }
 
 [dev-dependencies]
 average = "~0.9.2"
