--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,12 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-accel = { git = "https://github.com/LutzCle/accel.git" }
-accel-native = { git = "https://github.com/lutzcle/accel-native" }
-cuda-sys = { git = "https://github.com/LutzCle/accel.git" }
+cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 error-chain = "~0.12.0"
 libc = "~0.2.43"
 num = "~0.2.0"
 rand = "~0.6.5"
+rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 zipf = "~5.0.1"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
