--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ edition = "2018"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 error-chain = "~0.12.0"
 libc = "~0.2.43"
-num = "~0.2.0"
+num-traits = "~0.2.0"
+paste = "~0.1"
 rand = "~0.6.5"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 zipf = "~5.0.1"
