Fix serializing tuple bytes to CSV

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ hostname = "~0.1.5"
 rayon = "~1.0.3"
 serde = "~1.0.76"
 serde_derive = "~1.0.76"
+serde_repr = "~0.1"
 structopt = "~0.2"
 
 [profile.release]
