--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
+crossbeam-utils = "~0.6.5"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 error-chain = "~0.12.0"
 libc = "~0.2.43"
@@ -25,6 +26,7 @@ raw-cpuid = "~6.1.0"
 cc = { version = "~1.0.25", features = ["parallel"] }
 
 [dev-dependencies]
+assert_approx_eq = "~1.1.0"
 average = "~0.9.2"
 clap = "*"
 csv = "~1.0.1"
