Add `fold_async()` execution method and tune transfer-compute-overlapping

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ libc = "~0.2.43"
 num-traits = "~0.2.0"
 paste = "~0.1"
 rand = "~0.6.5"
+rayon = "~1.0.3"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 zipf = "~5.0.1"
 
