Import nvlink-benchmark as "microbench"
Original location: https://github.com/TU-Berlin-DIMA/nvlink-benchmark/

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [workspace]
 members = [
-        "numa-gpu",
         "hashjoin",
+        "numa-gpu",
+]
+exclude = [
+        "microbench",
 ]
 
 [profile.release]
