--- a/microbench/Cargo.toml
+++ b/microbench/Cargo.toml
@@ -2,6 +2,8 @@
 name = "microbench"
 version = "0.1.0"
 authors = ["Clemens Lutz <lutzcle@cml.li>"]
+license = "MPL-2.0"
+repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
 description = "Performance microbenchmarks for NVLink 2.0 on POWER9"
 readme = "../README.md"
 edition = "2018"
