--- a/microbench/Cargo.toml
+++ b/microbench/Cargo.toml
@@ -8,6 +8,13 @@ description = "Performance microbenchmarks for NVLink 2.0 on POWER9"
 readme = "../README.md"
 edition = "2018"
 
+[features]
+default = ["nvml"]
+
+# NVML enables us to read the actual clock rate of the GPU.
+# Otherwise, we use the GPU's default clock rate.
+nvml = ["nvml-wrapper"]
+
 [dependencies]
 average = "~0.9.2"
 clap = "*"
@@ -15,7 +22,7 @@ csv = "~1.0.1"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 hostname = "~0.1.5"
 libc = "~0.2.43"
-nvml-wrapper = "~0.4.1"
+nvml-wrapper = { version = "~0.4.1", optional = true }
 rayon = "~1.0.3"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 serde = "~1.0.76"
