--- a/numa-gpu/Cargo.toml
+++ b/numa-gpu/Cargo.toml
@@ -9,11 +9,13 @@ readme = "../README.md"
 edition = "2018"
 
 [dependencies]
+bitflags = "~1.1.0"
 crossbeam-utils = "~0.6.5"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 error-chain = "~0.12.0"
 libc = "~0.2.43"
 num-traits = "~0.2.0"
+num-rational = "~0.2.0"
 rayon = "~1.0.3"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 
