--- a/hashjoin/Cargo.toml
+++ b/hashjoin/Cargo.toml
@@ -15,6 +15,7 @@ csv = "~1.0.1"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 error-chain = "~0.12.0"
 hostname = "~0.1.5"
+num-rational = "~0.2.0"
 num-traits = "~0.2.0"
 paste = "~0.1"
 rand = "~0.6.5"
