--- a/numa-gpu/Cargo.toml
+++ b/numa-gpu/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 [dependencies]
 bitflags = "~1.1.0"
 crossbeam-utils = "~0.6.5"
+csv = "~1.1.1"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 error-chain = "~0.12.0"
 libc = "~0.2.43"
