--- a/hashjoin/Cargo.toml
+++ b/hashjoin/Cargo.toml
@@ -18,14 +18,15 @@ hostname = "~0.1.5"
 num-rational = "~0.2.0"
 num-traits = "~0.2.0"
 paste = "~0.1"
-rand = "~0.6.5"
 rayon = "~1.0.3"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 serde = "~1.0.76"
 serde_derive = "~1.0.76"
 serde_repr = "~0.1"
 structopt = "~0.2"
-zipf = "~5.0.1"
+
+[dependencies.datagen]
+path = "../datagen"
 
 [dependencies.numa-gpu]
 path = "../numa-gpu"
