--- a/microbench/Cargo.toml
+++ b/microbench/Cargo.toml
@@ -13,7 +13,7 @@ default = ["nvml"]
 
 # NVML enables us to read the actual clock rate of the GPU.
 # Otherwise, we use the GPU's default clock rate.
-nvml = ["nvml-wrapper"]
+nvml = ["nvml-wrapper", "numa-gpu/nvml"]
 
 [dependencies]
 average = "~0.9.2"
@@ -22,7 +22,6 @@ csv = "~1.1.1"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 hostname = "~0.1.5"
 libc = "~0.2.43"
-nvml-wrapper = { version = "~0.4.1", optional = true }
 rayon = "~1.0.3"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 serde = "~1.0.76"
@@ -31,6 +30,12 @@ structopt = "~0.2"
 
 [dependencies.numa-gpu]
 path = "../numa-gpu"
+
+[dependencies.nvml-wrapper]
+git = "https://github.com/Cldfire/nvml-wrapper"
+branch = "devel"
+optional = true
+features = ["serde"]
 
 [build-dependencies]
 cc = { version = "~1.0", features = ["parallel"] }
