--- a/numa-gpu/Cargo.toml
+++ b/numa-gpu/Cargo.toml
@@ -8,6 +8,13 @@ description = "A framework for CUDA and NUMA-aware execution using NVLink 2.0 on
 readme = "../README.md"
 edition = "2018"
 
+[features]
+default = ["nvml"]
+
+# NVML enables us to read the actual clock rate of the GPU.
+# Otherwise, we use the GPU's default clock rate.
+nvml = ["nvml-wrapper"]
+
 [dependencies]
 bitflags = "~1.1.0"
 crossbeam-utils = "~0.6.5"
@@ -18,6 +25,12 @@ num-traits = "~0.2.0"
 num-rational = "~0.2.0"
 rayon = "~1.0.3"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
+
+[dependencies.nvml-wrapper]
+git = "https://github.com/Cldfire/nvml-wrapper"
+branch = "devel"
+optional = true
+features = ["serde"]
 
 [dev-dependencies]
 assert_approx_eq = "~1.1.0"
