--- a/datagen/Cargo.toml
+++ b/datagen/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 
 [dependencies]
 csv = "~1.1.1"
+flate2 = { version = "~1.0.11", features = ["zlib"], default-features = false }
 num-traits = "~0.2.0"
 rand = "~0.6.5"
 serde = "~1.0.76"
