--- a/hashjoin/Cargo.toml
+++ b/hashjoin/Cargo.toml
@@ -14,6 +14,7 @@ clap = "*"
 csv = "~1.1.1"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 error-chain = "~0.12.0"
+flate2 = { version = "~1.0.11", features = ["zlib"], default-features = false }
 hostname = "~0.1.5"
 num-rational = "~0.2.0"
 num-traits = "~0.2.0"
