--- a/datagen/Cargo.toml
+++ b/datagen/Cargo.toml
@@ -9,10 +9,12 @@ readme = "../README.md"
 edition = "2018"
 
 [dependencies]
+crossbeam-utils = "~0.6.5"
 csv = "~1.1.1"
 flate2 = { version = "~1.0.11", features = ["zlib"], default-features = false }
 num-traits = "~0.2.0"
 rand = "~0.6.5"
+rayon = "~1.0.3"
 serde = "~1.0.76"
 serde_derive = "~1.0.76"
 structopt = "~0.2"
