sql-ops: Add microbenchmark for radix partition operator

--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -23,3 +23,11 @@ path = "../numa-gpu"
 [build-dependencies]
 cc = { version = "~1.0.25", features = ["parallel"] }
 libc = "~0.2.43"
+
+[dev-dependencies]
+criterion = "~0.3"
+papi = { git = "https://github.com/LutzCle/papi-rs", features = ["criterion"] }
+
+[[bench]]
+name = "radix_partition_operator"
+harness = false
