--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -26,7 +26,7 @@ libc = "~0.2.43"
 
 [dev-dependencies]
 criterion = "~0.3"
-papi = { git = "https://github.com/LutzCle/papi-rs", features = ["criterion"] }
+papi = { version = "~0.1.0", features = ["criterion"] }
 
 [[bench]]
 name = "radix_partition_operator"
