--- a/numa-gpu/Cargo.toml
+++ b/numa-gpu/Cargo.toml
@@ -23,6 +23,7 @@ error-chain = "~0.12.0"
 libc = "~0.2.43"
 num-traits = "~0.2.0"
 num-rational = "~0.2.0"
+procfs = { version = "~0.7.2", default-features = false }
 rayon = "~1.2.0"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 
@@ -34,6 +35,3 @@ features = ["serde"]
 
 [dev-dependencies]
 assert_approx_eq = "~1.1.0"
-
-[target.'cfg(target_arch = "x86_64")'.dependencies]
-raw-cpuid = "~6.1.0"
