--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -26,9 +26,19 @@ libc = "~0.2.43"
 
 [dev-dependencies]
 criterion = "~0.3"
-papi = { version = "~0.1.0", features = ["criterion"] }
+csv = "~1.1.1"
+hostname = "0.2"
+# papi = { version = "~0.1.0" }
+papi = { git = 'https://github.com/lutzcle/papi-rs', branch = "master", features = ["criterion"] }
 rand = "0.7"
+serde = "~1.0.76"
+serde_derive = "~1.0.76"
+structopt = "0.3"
 
 [[bench]]
 name = "radix_partition_operator"
+harness = false
+
+[[bench]]
+name = "gpu_radix_partition_operator"
 harness = false
