--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -25,11 +25,11 @@ cc = { version = "~1.0.25", features = ["parallel"] }
 libc = "~0.2.43"
 
 [dev-dependencies]
-criterion = "~0.3"
 csv = "~1.1.1"
 hostname = "0.2"
+num_cpus = "1.11"
 # papi = { version = "~0.1.0" }
-papi = { git = 'https://github.com/lutzcle/papi-rs', branch = "master", features = ["criterion"] }
+papi = { git = 'https://github.com/lutzcle/papi-rs', branch = "master" }
 rand = "0.7"
 serde = "~1.0.76"
 serde_derive = "~1.0.76"
