--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -31,6 +31,7 @@ num_cpus = "1.11"
 # papi = { version = "~0.1.0" }
 papi = { git = 'https://github.com/lutzcle/papi-rs', branch = "master" }
 rand = "0.7"
+rayon = "~1.2.0"
 serde = "~1.0.76"
 serde_derive = "~1.0.76"
 structopt = "0.3"
