--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -28,6 +28,7 @@ libc = "~0.2.43"
 csv = "~1.1.1"
 hostname = "0.2"
 num_cpus = "1.11"
+num-rational = "0.2"
 # papi = { version = "~0.1.0" }
 papi = { git = 'https://github.com/lutzcle/papi-rs', branch = "master" }
 rand = "0.7"
