--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -27,6 +27,7 @@ libc = "~0.2.43"
 [dev-dependencies]
 csv = "~1.1.1"
 hostname = "0.2"
+itertools = "0.9"
 num_cpus = "1.11"
 num-rational = "0.2"
 # papi = { version = "~0.1.0" }
