radix-join: Copy structure from hashjoin and adjust for radix joins

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
         "hashjoin",
         "microbench",
         "numa-gpu",
+        "radix-join",
         "sql-ops",
         "tpch-bench",
 ]
