radix-join: Refactor RadixJoinBench into the data-store crate and individual execution methods
Much more readable (c.f., HashJoinBench has ~1000 lines) and will
hopefully reduce the long compile times to something more tolerable.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
         "datagen",
+        "data-store",
         "hashjoin",
         "microbench",
         "numa-gpu",
