--- a/microbench/Cargo.toml
+++ b/microbench/Cargo.toml
@@ -10,16 +10,15 @@ edition = "2018"
 
 [dependencies]
 average = "~0.9.2"
-clap = "*"
-csv = "~1.1.1"
+csv = "~1.1.3"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
-hostname = "~0.1.5"
+hostname = "0.3"
 libc = "~0.2.43"
 rayon = "~1.2.0"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
-serde = "~1.0.76"
-serde_derive = "~1.0.76"
-structopt = "~0.2"
+serde = "~1.0.117"
+serde_derive = "~1.0.117"
+structopt = "0.3"
 
 [dependencies.numa-gpu]
 path = "../numa-gpu"
