sql-ops: Use singleton pattern to lazy-load the CUDA module
Repeatedly loading the CUDA module for every operator execution
significantly slows-down the run time. Instead, globally load the
module once the first time an operator is executed.

This change may break applications that use multiple CUDA contexts.
Instead, the application should replace multiple contexts with a single
global context.

--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 [dependencies]
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 num-traits = "~0.2.0"
+once_cell = "1.5"
 paste = "~0.1"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 
