--- a/radix-join/Cargo.toml
+++ b/radix-join/Cargo.toml
@@ -20,6 +20,9 @@ serde_derive = "~1.0.76"
 serde_repr = "~0.1"
 structopt = "0.3"
 
+[dev-dependencies]
+once_cell = "1.5"
+
 [dependencies.datagen]
 path = "../datagen"
 
