--- a/numa-gpu/Cargo.toml
+++ b/numa-gpu/Cargo.toml
@@ -16,6 +16,7 @@ error-chain = "~0.12.0"
 libc = "~0.2.43"
 num-traits = "~0.2.0"
 num-rational = "~0.2.0"
+once_cell = "1.5"
 procfs = { version = "~0.8.1", default-features = false }
 rayon = "~1.2.0"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
