--- a/hashjoin/Cargo.toml
+++ b/hashjoin/Cargo.toml
@@ -10,10 +10,8 @@ edition = "2018"
 
 [dependencies]
 average = "~0.9.2"
-clap = "*"
 csv = "~1.1.1"
 error-chain = "~0.12.0"
-flate2 = { version = "~1.0.11", features = ["zlib"], default-features = false }
 hostname = "~0.1.5"
 num-rational = "~0.2.0"
 num-traits = "~0.2.0"
@@ -26,6 +24,9 @@ structopt = "0.3"
 
 [dependencies.datagen]
 path = "../datagen"
+
+[dependencies.data-store]
+path = "../data-store"
 
 [dependencies.numa-gpu]
 path = "../numa-gpu"
