--- a/microbench/Cargo.toml
+++ b/microbench/Cargo.toml
@@ -13,11 +13,13 @@ average = "~0.9.2"
 csv = "~1.1.3"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
 hostname = "0.3"
+itertools = "0.9"
 libc = "~0.2.43"
 rayon = "~1.2.0"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
 serde = "~1.0.117"
 serde_derive = "~1.0.117"
+serde_repr = "~0.1"
 structopt = "0.3"
 
 [dependencies.numa-gpu]
