--- a/radix-join/Cargo.toml
+++ b/radix-join/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 [dependencies]
 csv = "~1.1.1"
 hostname = "~0.1.5"
+itertools = "0.9"
 num-rational = "~0.2.0"
 num-traits = "~0.2.0"
 rayon = "~1.2.0"
