--- a/hashjoin/Cargo.toml
+++ b/hashjoin/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 csv = "~1.1.1"
 error-chain = "~0.12.0"
 hostname = "~0.1.5"
+likwid = { git = "https://github.com/LutzCle/likwid-rs.git", branch = "master" }
 num-rational = "~0.2.0"
 num-traits = "~0.2.0"
 rayon = "~1.2.0"
@@ -32,3 +33,6 @@ path = "../numa-gpu"
 
 [dependencies.sql-ops]
 path = "../sql-ops"
+
+[features]
+likwid_perfmon = ["sql-ops/likwid_perfmon"]
