--- a/sql-ops/Cargo.toml
+++ b/sql-ops/Cargo.toml
@@ -9,7 +9,9 @@ readme = "../README.md"
 edition = "2018"
 
 [dependencies]
+cstr = "0.2.8"
 cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
+likwid = { git = "https://github.com/LutzCle/likwid-rs.git", branch = "master" }
 num-traits = "~0.2.0"
 once_cell = "1.5"
 paste = "~0.1"
@@ -45,3 +47,6 @@ harness = false
 [[bench]]
 name = "gpu_radix_partition_operator"
 harness = false
+
+[features]
+likwid_perfmon = ["likwid/likwid_perfmon"]
