--- a/data-store/Cargo.toml
+++ b/data-store/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 csv = "~1.1.1"
 flate2 = { version = "~1.0.11", features = ["zlib"], default-features = false }
 rayon = "~1.2.0"
-rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
+rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods_10_2" }
 serde = "~1.0.76"
 
 [dependencies.datagen]
