--- a/microbench/Cargo.toml
+++ b/microbench/Cargo.toml
@@ -11,12 +11,12 @@ edition = "2018"
 [dependencies]
 average = "~0.9.2"
 csv = "~1.1.3"
-cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
+cuda-driver-sys = "0.3"
 hostname = "0.3"
 itertools = "0.9"
 libc = "~0.2.43"
 rayon = "~1.2.0"
-rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
+rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods_10_2" }
 serde = "~1.0.117"
 serde_derive = "~1.0.117"
 serde_repr = "~0.1"
@@ -32,3 +32,4 @@ nvml-wrapper = { version = "0.7", features = ["serde"] }
 
 [build-dependencies]
 cc = { version = "~1.0", features = ["parallel"] }
+
