--- a/numa-gpu/Cargo.toml
+++ b/numa-gpu/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 [dependencies]
 bitflags = "1.2"
 crossbeam-utils = "~0.6.5"
-cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
+cuda-driver-sys = "0.3"
 error-chain = "~0.12.0"
 libc = "~0.2.43"
 num-traits = "~0.2.0"
@@ -19,7 +19,7 @@ num-rational = "~0.2.0"
 once_cell = "1.5"
 procfs = { version = "~0.8.1", default-features = false }
 rayon = "~1.2.0"
-rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
+rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods_10_2" }
 
 # NVML enables us to read the actual clock rate of the GPU.
 # Otherwise, we use the GPU's default clock rate.
