--- a/tpch-bench/Cargo.toml
+++ b/tpch-bench/Cargo.toml
@@ -18,7 +18,7 @@ num-rational = "~0.2.0"
 rand = "~0.7.3"
 rand_distr = "0.2.2"
 rayon = "~1.2.0"
-rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
+rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods_10_2" }
 serde = "~1.0.76"
 serde_derive = "~1.0.76"
 structopt = "~0.2"
