--- a/numa-gpu/Cargo.toml
+++ b/numa-gpu/Cargo.toml
@@ -16,10 +16,12 @@ error-chain = "~0.12.0"
 libc = "~0.2.43"
 num-traits = "~0.2.0"
 num-rational = "~0.2.0"
+nvtx-sys = { git = "https://github.com/LutzCle/cuda-sys.git", branch = "nvtx-sys" }
 once_cell = "1.5"
 procfs = { version = "~0.8.1", default-features = false }
 rayon = "~1.2.0"
 rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods_10_2" }
+serde = "~1.0.76"
 
 # NVML enables us to read the actual clock rate of the GPU.
 # Otherwise, we use the GPU's default clock rate.
